--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -305,19 +305,18 @@ eng:
       purchase_orders: 'Purchase orders'
       #>purchase_orders_kame: 'Purchase orders kame'
       #>purchase_products_dyli: 'Purchase products dyli'
-      sales_invoice: '%{nature} %{number}' #!
-      sales_invoice_cancel: 'Cancel sales invoice %{number}' #!
-      sales_invoices: 'Sales invoices' #!
-      sales_order: 'Sales order %{number} - %{state}'
+      sales_order: '%{label} for %{client}'
       sales_order_abort: 'Abort sale'
+      sales_order_cancel: 'Cancel sales invoice %{number}'
       sales_order_confirm: 'Confirm estimate and go to deliveries'
       #>sales_order_contacts: 'Sales order contacts'
       sales_order_correct: 'Correct estimate'
       sales_order_create: 'New sales order'
+      #>sales_order_creditable_lines_kame: 'Sales order creditable lines kame'
+      #>sales_order_credits_kame: 'Sales order credits kame'
       #>sales_order_delete: 'Sales order delete'
       #>sales_order_deliveries_kame: 'Sales order deliveries kame'
       #>sales_order_duplicate: 'Sales order duplicate'
-      sales_order_finish: 'Finish sale'
       sales_order_invoice: 'Invoice sales order'
       sales_order_line_create: 'Add a new line of product'
       #>sales_order_line_delete: 'Sales order line delete'
@@ -1121,7 +1120,6 @@ eng:
     running_finished: 'Running Finished'
     sales_conditions: 'Conditions of sales'
     sales_invoice: 'Invoicing'
-    sales_invoice_cancel: 'Cancel sales invoice'
     sales_invoice_lines: 'Sales invoice lines'
     sales_invoice_number: 'Sales invoice'
     sales_invoice_print: 'Print sales invoice'
@@ -1133,6 +1131,7 @@ eng:
       credits: 'Credits'
     sales_invoices_total: 'Sales invoices total'
     sales_order: 'Sales order'
+    sales_order_cancel: 'Cancel sales invoice'
     sales_order_deliveries: 'Deliveries'
     sales_order_line_create: 'Add a product to estimate (Full mode)'
     sales_order_lines: 'Edit sales order'
@@ -1385,7 +1384,7 @@ eng:
     journal_closed_on: 'The journal "%{journal}" was closed on %{closed_on}.'
     journal_entry_already_validated: 'The record has already been validated and can not be changed'
     journal_entry_has_been_saved: 'The record %{number} has been successfully saved'
-    #>journal_entry_lines_marked_with_letter: 'Journal entry lines marked with letter'
+    journal_entry_lines_marked_with_letter: 'Journal entry lines have been marked with letter %{letter}'
     journal_reopened_on: 'The journal "%{journal}" has been re-opened on %{closed_on}.'
     mails_are_sent: 'The emails were sent'
     need_balanced_journal_to_tax_declaration: 'All your journals must be closed and balanced at that date.'
@@ -1395,7 +1394,7 @@ eng:
     need_entries_to_point: 'No entry was found for the period of the bank statement.'
     need_journal_to_manage_tax_declaration: 'You must have at least one journal of various operations and a journal of sales or purchases in order to save tax returns.'
     need_payment_mode_to_create_deposit: 'You must specify a mode of payment in order to make deposits'
-    need_quantities_to_cancel_an_sales_invoice: 'You must specify a quantity in order to cancel the sales invoice'
+    need_quantities_to_cancel_an_sales_order: 'You must specify a quantity in order to cancel the sales invoice'
     need_stocks_to_create_inventories: 'You have to manage some stocks in order to manage inventories'
     need_stocks_warehouse_to_create_products: 'You must create a warehouse to be able to create a product'
     need_to_create_subscription_nature: 'You must create a type of subscription to manage your subscriptions'
@@ -1425,8 +1424,7 @@ eng:
     sales_order_already_invoiced: 'The sale has already been invoiced: you can not define delivery '
     sales_order_cannot_be_updated: 'The estimate is no longer editable.'
     sales_order_cant_be_deleted: 'The sales order can not be deleted.'
-    select_entries_to_mark_together: 'Select entries in order to letter them together' #!
-    #>select_entry_lines_to_mark_together: 'Select entry lines to mark together'
+    select_entry_lines_to_mark_together: 'Select entry lines to mark together'
     specify_filter: 'You must choose at least one search filter'
     specify_updates: 'You must specify at least one field to edit'
     unavailable_model: 'Inexistent %{model} (%{id})'
