--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -75,13 +75,6 @@ eng:
       purchase_order_line:
         order: 'Purchase order'
         order_id: 'Purchase order'
-      sales_invoice:
-        credit: 'Credit'
-        lines: 'Sales invoice lines'
-        origin: 'Original sales invoice'
-        origin_id: 'Original sales invoice'
-      sales_invoice_line:
-        origin_id: 'Original line'
       sales_order:
         contact: 'Address for the estimate'
         contact_id: 'Address for the estimate'
@@ -291,8 +284,8 @@ eng:
       purchase_order: 'Purchase order'
       purchase_order_line: 'Purchase order line'
       role: 'Role'
-      sales_invoice: 'Sales invoice' #!
-      sales_invoice_line: 'Sales invoice line' #!
+      sales_invoice: ''
+      sales_invoice_line: ''
       sales_order: 'Sales order'
       sales_order_line: 'Sales order line'
       sales_order_nature: 'Sales order type'
@@ -431,8 +424,8 @@ eng:
     creator_id: 'Creator'
     credit: 'Credit'
     credit_lines: 'Credit lines' #!
-    credited_quantity: 'Credited quantity' #!
-    credits: 'Credits' #!
+    credited_quantity: 'Credited quantity'
+    credits: 'Credits'
     critic_quantity_min: 'Critic quantity min'
     crypt_key: 'Crypt key'
     crypt_mode: 'Crypt mode'
@@ -501,8 +494,6 @@ eng:
     downpayment_amount: 'Downpayment amount'
     downpayment_minimum: 'Downpayment minimum'
     downpayment_rate: 'Downpayment rate'
-    draft: 'Draft' #!
-    draft_mode: 'Draft mode' #!
     duration: 'Duration'
     ean13: 'Ean13'
     email: 'Email'
@@ -589,7 +580,7 @@ eng:
     incoming_payment_uses: 'Incoming payment parts'
     incoming_payments: 'Incoming payments'
     indirect_links: 'Indirect links'
-    #>initial_number: 'Initial number'
+    initial_number: 'Initial number'
     integer_value: 'Integer value'
     introduction: 'Introduction'
     inventories: 'Inventories'
@@ -598,8 +589,7 @@ eng:
     inventory_lines: 'Inventory lines'
     invoice_contact: 'Sales invoice contact'
     invoice_contact_id: 'Sales invoice contact'
-    invoiced: 'Invoiced' #!
-    #>invoiced_on: 'Invoiced on'
+    invoiced_on: 'Invoiced on'
     invoices_count: 'Invoices count'
     is_debit: 'Is debit'
     item_listing: 'Item listing'
@@ -711,8 +701,6 @@ eng:
     parent: 'Parent'
     parent_id: 'Parent'
     parent_land_parcel_id: 'Parent land parcel'
-    parts: 'Parts' #!
-    parts_amount: 'Used amount' #!
     password: 'Password'
     password_confirmation: 'Confirmation of password'
     payee: 'Payee'
@@ -821,11 +809,7 @@ eng:
     sales_account: 'Sales account'
     sales_account_id: 'Sales account'
     sales_conditions: 'Sales conditions'
-    sales_invoice: 'Sales invoice' #!
-    sales_invoice_id: 'Sales invoice' #!
-    sales_invoice_lines: 'Sales invoice lines' #!
     sales_invoices: 'Sales invoices'
-    sales_invoices_count: 'Sales invoices count' #!
     sales_order: 'Sales order'
     sales_order_id: 'Sales order'
     sales_order_line_id: 'Sales order line'
@@ -1323,17 +1307,21 @@ eng:
       name: '%{product} (%{quantity}%{unit}), %{amount}%{currency}/%{unit}'
       name_with_tracking: '%{product}/%{tracking} (%{quantity}%{unit}), %{amount}%{currency}/%{unit}'
       tracking: 'S/N: %{serial}'
-    sales_invoice: #!
-      bookkeep: '[%{resource} %{number}] %{products} for %{client} (%{sales_order})' #!
-      label: #!
-        credit: 'Credit %{number}' #!
+    sales_invoice:
+      label:
+        credit: 'Credit %{number}'
         normal: 'Sales invoice %{number}'
-    sales_invoice_line: #!
+    sales_invoice_line:
       no_product: '[No product]'
     sales_order:
+      bookkeep: '[%{resource} %{number}] %{products} for %{client} (%{sales_order})'
       label:
+        aborted: 'Aborted sale %{number}'
+        draft: 'Draft %{number}'
         estimate: 'Estimate %{number}'
-        order: 'Order %{number}'
+        invoice: 'Sales invoice %{number}'
+        order: 'Sales order %{number}'
+        refused: 'Refused estimate %{number}'
       natures:
         estimate: 'Estimate'
         order: 'Order'
