--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -164,15 +164,15 @@ fra:
       purchase_order_refuse: 'Commande refusée'
       purchase_order_update: 'Modifier l''achat : %{number}'
       purchase_orders: 'Achats'
-      sales_invoice: '%{nature} %{number}'
-      sales_invoice_cancel: 'Passage en avoir de la facture %{number}'
-      sales_invoices: 'Factures'
+      sales_invoice: '%{nature} %{number}' #!
+      sales_invoices: 'Factures' #!
       sales_order: 'Vente %{number} pour %{client} - %{state}'
       sales_order_abort: 'Annuler la vente'
+      sales_order_cancel: 'Passage en avoir de la facture %{number}'
       sales_order_confirm: 'Passer le devis en commande et aller aux livraisons'
       sales_order_correct: 'Corriger le devis'
       sales_order_create: 'Nouvelle vente'
-      sales_order_finish: 'Finir la vente'
+      sales_order_finish: 'Finir la vente' #!
       sales_order_invoice: 'Facturer directement tout le devis'
       sales_order_line_create: 'Ajout d''une ligne de produit'
       sales_order_line_update: 'Modifier une ligne de produit'
@@ -817,7 +817,7 @@ fra:
     production_rights: 'Droits module Production'
     productions: 'Productions'
     products: 'Produits'
-    #>profitability: 'Profitability'
+    profitability: 'Rentabilité'
     purchase: 'Commande'
     purchase_order: 'Achat'
     purchase_order_lines: 'Lignes de l''achat'
@@ -871,7 +871,6 @@ fra:
     running_finished: 'Produits d''exploitation'
     sales_conditions: 'Conditions de vente'
     sales_invoice: 'Facture'
-    sales_invoice_cancel: 'Faire un avoir sur la facture'
     sales_invoice_lines: 'Lignes de la facture'
     sales_invoice_number: 'Numéro de facture'
     sales_invoice_print: 'Imprimer la facture'
@@ -883,6 +882,7 @@ fra:
       credits: 'Avoirs'
     sales_invoices_total: 'Total factures'
     sales_order: 'Vente'
+    sales_order_cancel: 'Faire un avoir sur la facture'
     sales_order_deliveries: 'Livraisons'
     sales_order_line_create: 'Ajouter un produit au devis (Mode complet)'
     sales_order_lines: 'Lignes de la vente'
@@ -970,9 +970,9 @@ fra:
     total: 'Total'
     total_amount: 'Montant total HT'
     total_invoiced_amount: 'Total montant facturé'
-    #>total_paid_amount: 'Total paid amount'
+    total_paid_amount: 'Montant total payé'
     total_quantity: 'Quantité totale'
-    #>total_unpaid_amount: 'Total unpaid amount'
+    total_unpaid_amount: 'Montant total impayé'
     totals: 'Totaux (pièces validées et brouillard)'
     tracking: 'Lot'
     transfer: 'Effectuer les transferts'
@@ -1144,6 +1144,7 @@ fra:
     journal_closed_on: 'Le %{journal} a été clôturé au %{closed_on} correctement.'
     journal_entry_already_validated: 'La pièce a déjà été validée et ne peut plus être modifiée'
     journal_entry_has_been_saved: 'La pièce N°%{number} a été enregistrée correctement'
+    #>journal_entry_lines_marked_with_letter: 'Journal entry lines have been marked with letter %{letter}'
     journal_reopened_on: 'Le %{journal} a été déclôturé au %{closed_on} correctement.'
     mails_are_sent: 'Les courriels ont été envoyés'
     need_balanced_journal_to_tax_declaration: 'Tous vos journaux doivent être clôturés et équilibrés à cette date.'
@@ -1153,7 +1154,8 @@ fra:
     need_entries_to_point: 'Aucune écriture n''a été trouvé pour la période du relevé bancaire.'
     need_journal_to_manage_tax_declaration: 'Vous devez avoir au moins un journal des opérations diverses et un journal de vente ou d''achat pour pouvoir enregistrer des déclarations de taxes.'
     need_payment_mode_to_create_deposit: 'Vous devez spécifier un mode de réglement pour effectuer une remise en banque'
-    need_quantities_to_cancel_an_sales_invoice: 'Vous devez spécifier une quantité pour pouvoir faire un avoir'
+    need_quantities_to_cancel_an_sales_invoice: 'Vous devez spécifier une quantité pour pouvoir faire un avoir' #!
+    #>need_quantities_to_cancel_an_sales_order: 'You must specify a quantity in order to cancel the sales invoice'
     need_stocks_to_create_inventories: 'Vous devez gérer les stocks d''au moins un produit pour pouvoir faire un inventaire'
     need_stocks_warehouse_to_create_products: 'Vous devez créer un lieu de stockage pour pouvoir créer un produit'
     need_to_create_subscription_nature: 'Vous devez créer un type d''abonnement pour pouvoir gérer vos abonnements'
@@ -1187,7 +1189,8 @@ fra:
     sales_order_already_invoiced: 'La vente a déjà été facturée: vous ne pouvez pas définir de livraison'
     sales_order_cannot_be_updated: 'Le devis n''est plus modifiable.'
     sales_order_cant_be_deleted: 'La vente ne peut plus être supprimée'
-    select_entries_to_mark_together: 'Sélectionnez des écritures à lettrer ensemble'
+    select_entries_to_mark_together: 'Sélectionnez des écritures à lettrer ensemble' #!
+    #>select_entry_lines_to_mark_together: 'Select entry lines to mark together'
     specify_filter: 'Vous choisir appliquer au moins un filtre de recherche'
     specify_updates: 'Vous devez spécifier au moins un champ à modifier'
     unavailable_model: '%{model} indisponible ou inexistante (%{id})'
