--- a/config/locales/fra/rights.yml
+++ b/config/locales/fra/rights.yml
@@ -13,7 +13,7 @@ fra:
     consult_prices: 'Consulter les prix'
     consult_products: 'Consulter les produits'
     consult_purchase_orders: 'Consulter les achats'
-    consult_sales_invoices: 'Consulter les factures'
+    consult_sales_invoices: 'Consulter les factures' #!
     consult_sales_orders: 'Consulter les ventes'
     consult_stocks: 'Consulter l''état des stocks'
     consult_trackings: 'Consulter les informations de tracabilité'
