--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -164,15 +164,12 @@ jpn:
       #>purchase_order_refuse: 'Refused order'
       #>purchase_order_update: 'Edit the purchase order: %{number}'
       #>purchase_orders: 'Purchase orders'
-      #>sales_invoice: '%{nature} %{number}'
-      #>sales_invoice_cancel: 'Cancel sales invoice %{number}'
-      #>sales_invoices: 'Sales invoices'
-      #>sales_order: 'Sales order %{number} - %{state}'
+      #>sales_order: '%{label} for %{client}'
       #>sales_order_abort: 'Abort sale'
+      #>sales_order_cancel: 'Cancel sales invoice %{number}'
       #>sales_order_confirm: 'Confirm estimate and go to deliveries'
       #>sales_order_correct: 'Correct estimate'
       #>sales_order_create: 'New sales order'
-      #>sales_order_finish: 'Finish sale'
       #>sales_order_invoice: 'Invoice sales order'
       #>sales_order_line_create: 'Add a new line of product'
       #>sales_order_line_update: 'Edit sales order line'
@@ -853,7 +850,6 @@ jpn:
     #>running_finished: 'Running Finished'
     #>sales_conditions: 'Conditions of sales'
     #>sales_invoice: 'Invoicing'
-    #>sales_invoice_cancel: 'Cancel sales invoice'
     #>sales_invoice_lines: 'Sales invoice lines'
     #>sales_invoice_number: 'Sales invoice'
     #>sales_invoice_print: 'Print sales invoice'
@@ -865,6 +861,7 @@ jpn:
       #>credits: 'Credits'
     #>sales_invoices_total: 'Sales invoices total'
     #>sales_order: 'Sales order'
+    #>sales_order_cancel: 'Cancel sales invoice'
     #>sales_order_deliveries: 'Deliveries'
     #>sales_order_line_create: 'Add a product to estimate (Full mode)'
     #>sales_order_lines: 'Edit sales order'
@@ -1117,6 +1114,7 @@ jpn:
     #>journal_closed_on: 'The journal "%{journal}" was closed on %{closed_on}.'
     #>journal_entry_already_validated: 'The record has already been validated and can not be changed'
     #>journal_entry_has_been_saved: 'The record %{number} has been successfully saved'
+    #>journal_entry_lines_marked_with_letter: 'Journal entry lines have been marked with letter %{letter}'
     #>journal_reopened_on: 'The journal "%{journal}" has been re-opened on %{closed_on}.'
     #>mails_are_sent: 'The emails were sent'
     #>need_balanced_journal_to_tax_declaration: 'All your journals must be closed and balanced at that date.'
@@ -1126,7 +1124,7 @@ jpn:
     #>need_entries_to_point: 'No entry was found for the period of the bank statement.'
     #>need_journal_to_manage_tax_declaration: 'You must have at least one journal of various operations and a journal of sales or purchases in order to save tax returns.'
     #>need_payment_mode_to_create_deposit: 'You must specify a mode of payment in order to make deposits'
-    #>need_quantities_to_cancel_an_sales_invoice: 'You must specify a quantity in order to cancel the sales invoice'
+    #>need_quantities_to_cancel_an_sales_order: 'You must specify a quantity in order to cancel the sales invoice'
     #>need_stocks_to_create_inventories: 'You have to manage some stocks in order to manage inventories'
     #>need_stocks_warehouse_to_create_products: 'You must create a warehouse to be able to create a product'
     #>need_to_create_subscription_nature: 'You must create a type of subscription to manage your subscriptions'
@@ -1156,7 +1154,7 @@ jpn:
     #>sales_order_already_invoiced: 'The sale has already been invoiced: you can not define delivery '
     #>sales_order_cannot_be_updated: 'The estimate is no longer editable.'
     #>sales_order_cant_be_deleted: 'The sales order can not be deleted.'
-    #>select_entries_to_mark_together: 'Select entries in order to letter them together'
+    #>select_entry_lines_to_mark_together: 'Select entry lines to mark together'
     #>specify_filter: 'You must choose at least one search filter'
     #>specify_updates: 'You must specify at least one field to edit'
     #>unavailable_model: 'Inexistent %{model} (%{id})'
