--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1144,7 +1144,7 @@ fra:
     journal_closed_on: 'Le %{journal} a été clôturé au %{closed_on} correctement.'
     journal_entry_already_validated: 'La pièce a déjà été validée et ne peut plus être modifiée'
     journal_entry_has_been_saved: 'La pièce N°%{number} a été enregistrée correctement'
-    #>journal_entry_lines_marked_with_letter: 'Journal entry lines have been marked with letter %{letter}'
+    journal_entry_lines_marked_with_letter: 'Les lignes d''écritures ont été lettrées avec la lettre %{letter}'
     journal_reopened_on: 'Le %{journal} a été déclôturé au %{closed_on} correctement.'
     mails_are_sent: 'Les courriels ont été envoyés'
     need_balanced_journal_to_tax_declaration: 'Tous vos journaux doivent être clôturés et équilibrés à cette date.'
@@ -1154,8 +1154,7 @@ fra:
     need_entries_to_point: 'Aucune écriture n''a été trouvé pour la période du relevé bancaire.'
     need_journal_to_manage_tax_declaration: 'Vous devez avoir au moins un journal des opérations diverses et un journal de vente ou d''achat pour pouvoir enregistrer des déclarations de taxes.'
     need_payment_mode_to_create_deposit: 'Vous devez spécifier un mode de réglement pour effectuer une remise en banque'
-    need_quantities_to_cancel_an_sales_invoice: 'Vous devez spécifier une quantité pour pouvoir faire un avoir' #!
-    #>need_quantities_to_cancel_an_sales_order: 'You must specify a quantity in order to cancel the sales invoice'
+    need_quantities_to_cancel_an_sales_order: 'Vous devez spécifier une quantité pour pouvoir faire un avoir'
     need_stocks_to_create_inventories: 'Vous devez gérer les stocks d''au moins un produit pour pouvoir faire un inventaire'
     need_stocks_warehouse_to_create_products: 'Vous devez créer un lieu de stockage pour pouvoir créer un produit'
     need_to_create_subscription_nature: 'Vous devez créer un type d''abonnement pour pouvoir gérer vos abonnements'
@@ -1189,8 +1188,7 @@ fra:
     sales_order_already_invoiced: 'La vente a déjà été facturée: vous ne pouvez pas définir de livraison'
     sales_order_cannot_be_updated: 'Le devis n''est plus modifiable.'
     sales_order_cant_be_deleted: 'La vente ne peut plus être supprimée'
-    select_entries_to_mark_together: 'Sélectionnez des écritures à lettrer ensemble' #!
-    #>select_entry_lines_to_mark_together: 'Select entry lines to mark together'
+    select_entry_lines_to_mark_together: 'Sélectionnez des lignes d''écritures à lettrer ensemble'
     specify_filter: 'Vous choisir appliquer au moins un filtre de recherche'
     specify_updates: 'Vous devez spécifier au moins un champ à modifier'
     unavailable_model: '%{model} indisponible ou inexistante (%{id})'
